--- a/home-programs/zed/settings.json
+++ b/home-programs/zed/settings.json
@@ -69,6 +69,6 @@
   "theme": {
     "mode": "dark",
     "light": "macOS Classic Light",
-    "dark": "macOS Classic Dark",
+    "dark": "Brogrammer",
   },
 }
